# diplom_todolist

./: README.md  docker-compose.yaml  dockerfile  dockerfile.prod  entrypoint.sh  pyproject.toml
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
todolist/: fields.py  settings.py  urls.py
